crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_bool__wrong_test.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_bool.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(root), pretty(after))"
---
--- before
case@Bool true of
  Nil -> 42
--- after
case@Bool true of
  Nil -> 42
--- errors
InvalidCase("non-boolean test")
InvalidCase("non-boolean test")
